Vector + FileServer: update testing scripts